--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
 
 members = [
-    "wdb-core", "wdb-engine-default", "wdb-grpc", "wdb-server",
+    "wdb-core", "wdb-storage-engine", "wdb-grpc", "wdb-server",
 ]
