--- a/wdb-server/Cargo.toml
+++ b/wdb-server/Cargo.toml
@@ -10,5 +10,5 @@ tokio = { version = "1.36.0", features = ["full"] }
 tonic = "0.11.0"
 wdb-grpc = { path = "../wdb-grpc" }
 wdb-core = { path = "../wdb-core" }
-wdb-engine-default = { path = "../wdb-engine-default" }
+wdb-storage-engine = { path = "../wdb-storage-engine" }
 tonic-reflection = "0.11.0"
