--- a/wdb-storage-engine/Cargo.toml
+++ b/wdb-storage-engine/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wdb-engine-default"
+name = "wdb-storage-engine"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,6 +7,12 @@ edition = "2021"
 
 [dependencies]
 bincode = "1.3.3"
+bytes = { version = "1.6.0", features = ["serde"] }
+crossbeam-skiplist = "0.1.3"
+dashmap = "5.5.3"
 serde = { version = "1.0.197", features = ["derive"] }
 uuid = { name  = "1.8.0", features = ["v7"] }
 wdb-core = { path = "../wdb-core" }
+
+[dev-dependencies]
+rand = "0.8.5"
