--- a/wdb-storage-engine/Cargo.toml
+++ b/wdb-storage-engine/Cargo.toml
@@ -10,6 +10,7 @@ bincode = "1.3.3"
 bytes = { version = "1.6.0", features = ["serde"] }
 crossbeam-skiplist = "0.1.3"
 dashmap = "5.5.3"
+itertools = "0.13.0"
 serde = { version = "1.0.197", features = ["derive"] }
 uuid = { name  = "1.8.0", features = ["v7"] }
 wdb-core = { path = "../wdb-core" }
