--- a/wdb-storage-engine/Cargo.toml
+++ b/wdb-storage-engine/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+arc-swap = "1.7.1"
 bincode = "1.3.3"
 bytes = { version = "1.6.0", features = ["serde"] }
 crossbeam-skiplist = "0.1.3"
@@ -13,6 +14,7 @@ dashmap = "5.5.3"
 itertools = "0.13.0"
 log = "0.4.21"
 serde = { version = "1.0.197", features = ["derive"] }
+tokio = "1.37.0"
 uuid = { name  = "1.8.0", features = ["v7"] }
 
 [dev-dependencies]
