--- a/wdb-storage-engine/Cargo.toml
+++ b/wdb-storage-engine/Cargo.toml
@@ -14,7 +14,7 @@ dashmap = "5.5.3"
 itertools = "0.13.0"
 log = "0.4.21"
 serde = { version = "1.0.197", features = ["derive"] }
-tokio = "1.37.0"
+tokio = { version = "1.36.0", features = ["full"] }
 uuid = { name  = "1.8.0", features = ["v7"] }
 
 [dev-dependencies]
