created wdb-cli crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
 
 members = [
-    "wdb-storage-engine", "wdb-grpc", "wdb-server",
+    "wdb-storage-engine", "wdb-grpc", "wdb-server", "wdb-cli",
 ]
