--- a/wdb-storage-engine/Cargo.toml
+++ b/wdb-storage-engine/Cargo.toml
@@ -15,7 +15,7 @@ itertools = "0.13.0"
 log = "0.4.21"
 serde = { version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.36.0", features = ["full"] }
-uuid = { name  = "1.8.0", features = ["v7"] }
+uuid = { version = "1.8.0", features = ["v7"] }
 
 [dev-dependencies]
 rand = "0.8.5"
